<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_name"
        android:id="@+id/view_count"
        android:textSize="260sp"
        android:textAlignment="center"
        android:background="#FFC0CB"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_astagfirullah"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/istighfar_name2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_marginHorizontal="10dp"
            android:id="@+id/btn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sholawat_name"
            android:textColor="@color/cardview_light_background" />
        <Button
            android:layout_marginHorizontal="10dp"
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_name"
            android:textColor="@color/cardview_light_background"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_istighfar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/istighfar_name"
        android:textColor="@color/cardview_light_background"/>


</LinearLayout>