<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".BmiActivity"
android:orientation="vertical"
android:gravity="top"
android:paddingVertical="50dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/bmi_calculator"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/masukkan_berat_badan"
            android:paddingHorizontal="10dp"
            android:background="@drawable/editext_border"
            android:id="@+id/berat_badan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/masukkan_tinggi_badan"
            android:paddingHorizontal="10dp"
            android:background="@drawable/editext_border"
            android:id="@+id/tinggi_badan"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toast"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:id="@+id/btn_toast"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hitung"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:id="@+id/btn_hitung"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_name"
            android:id="@+id/hasil"
            android:textSize="100sp"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_keterangan"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_16dp"/>

    </LinearLayout>

</LinearLayout>