<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@color/black"
    android:id="@+id/parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/text_field">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="24sp"
                android:textColor="@color/purple"
                android:paddingHorizontal="@dimen/_16dp"
                android:id="@+id/operator"
                />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:textSize="64sp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:inputType="number"
            android:id="@+id/text_input"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="36sp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:id="@+id/text_hasil"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="48dp"
        android:layout_below="@id/text_field"
        android:id="@+id/tombol"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_7"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_8"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_9"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/per"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_per"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_4"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_5"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_6"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/x"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_times"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/min"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/del"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/del"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/c"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/clear"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/button_plus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_light"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:id="@+id/button_equals"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>